      to synchronize some attributes like mail addresses, names and roles from
      LDAP into multisite.
    * Modularized the authentication and user management code in WATO
    * Restructured cookie auth cookies (all auth cookies will be invalid
      after update -> all users have to login again)
    * Modularized login and cookie validation
    
    WATO:
    * FIX: Fixed generated manual check definitions for checks without items
      like ntp_time and tcp_conn_stats

1.2.1i3:
    Core:
    * added HOST/SERVICEPROBLEMID to notification macros
    * New configuration check_periods for limiting execution of
      Check_MK checks to a certain time period.

    Checks & Agents:
    * Windows agent: persist offsets for logfile monitoring

    Notifications:
    * fix two errors in code that broke some service notifications

    Event Console:
    * New performance counter for client request processing time
    * FIX: fixed bug in rule optimizer with ranges of syslog priorities

    WATO:
    * Cloning of contact/host/service groups (without members)

    Checks & Agents:
    * logwatch: Fixed confusion with ignore/ok states of log messages
    * AIX Agent: now possible to specify -d flag. Please test :)

1.2.1i2:
    Core:
    * Improved validation of inventory data reported by checks
    * Added -d option to precompiled checks to enable debug mode
    * doc/treasures: added script for printing RRD statistics

    Notifications:
    * New system of custom notification, with WATO support

    Event Console:
    * Moved source of Event Console into Check_MK project 
    * New button for resetting all rule hits counters
    * When saving a rule then its hits counter is always reset
    * New feature of hiding certain actions from the commands in the status GUI
    * FIX: rule simulator ("Try out") now handles cancelling rules correctly
    * New global option for enabling log entries for rule hits (debugging)